--- a/ckanext/ckanext-sixodp_ui/src/scss/base/layout.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/base/layout.scss
@@ -39,11 +39,11 @@ body {
   width: 100%;
   margin: 0 auto;
 
-  @media (min-width: 480px) {
+  @media (min-width: $width-xs) {
     width: 80%;
   }
 
-  @media (min-width: 1080px) {
+  @media (min-width: $width-md) {
     width: 960px;
   }
 
