--- a/ckanext/ckanext-sixodp_ui/src/scss/base/variables.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/base/variables.scss
@@ -25,3 +25,9 @@ $border-radius-small: 2px;
 $border-base: 2px;
 
 $padding-base: 20px;
+
+// Breakpoints
+$width-xs: 480px;
+$width-sm: 768px;
+$width-md: 992px;
+$width-lg: 1200px;
